first version of customise ODH for the ml-workshop

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -1,8 +1,8 @@
 apiVersion: kfdef.apps.kubeflow.org/v1
 kind: KfDef
 metadata:
-  name: opendatahub
-  namespace: opendatahub
+  name: opendatahub-ml-workshop
+#  namespace: opendatahub
 spec:
   applications:
     - kustomizeConfig:
