--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -99,6 +99,10 @@ spec:
               http://minio-ml-workshop.ml-workshop:9000
           - name: s3_credentials_secret
             value: s3-credentials
+          - name: HIVE_LOG_LEVEL
+            value: DEBUG
+          - name: s3_endpoint_url_prefix
+            value: ""
         repoRef:
           name: manifests
           path: trino
