--- a/trino/overlays/ml-workshop/hive-metastore-dc.yaml
+++ b/trino/overlays/ml-workshop/hive-metastore-dc.yaml
@@ -9,6 +9,7 @@ spec:
   template:
     spec:
       containers:
-        - env:
+        - name: metastore
+          env:
             - name: HIVE_LOGLEVEL
-              value: "DEBUG"
+              value: "INFO"
