--- a/trino/overlays/ml-workshop/hive-metastore-dc.yaml
+++ b/trino/overlays/ml-workshop/hive-metastore-dc.yaml
@@ -12,4 +12,6 @@ spec:
         - name: metastore
           env:
             - name: HIVE_LOGLEVEL
-              value: "INFO"
+              value: "DEBUG"
+            - name: S3_ENDPOINT_URL_PREFIX
+              value: ""
