fix the AWS key name

--- a/trino/overlays/ml-workshop/s3-secret.yaml
+++ b/trino/overlays/ml-workshop/s3-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: s3-credentials
 stringData:
-  AWS_ACCESS_ID: minio
+  AWS_ACCESS_KEY_ID: minio
   AWS_SECRET_ACCESS_KEY: minio123
   BUCKET: data
