--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -120,7 +120,11 @@ spec:
           name: manifests
           path: ml-workshop-kafka-populator
       name: modeldb
-
+    - kustomizeConfig:
+        repoRef:
+          name: manifests
+          path: ml-workshop-jenkins
+      name: ml-jenkins
   repos:
     - name: kf-manifests
       uri: https://github.com/kubeflow/manifests/archive/v1.2-branch.tar.gz
