fixed a copy paster mistake

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -119,7 +119,7 @@ spec:
         repoRef:
           name: manifests
           path: ml-workshop-kafka-populator
-      name: modeldb
+      name: kafka-populator
     - kustomizeConfig:
         repoRef:
           name: manifests
