--- a/ml-workshop-minio/base/minio-dc.yaml
+++ b/ml-workshop-minio/base/minio-dc.yaml
@@ -65,8 +65,14 @@ spec:
               value: "public"
             - name: MINIO_TRACE
               value: "true"
+            - name: MINIO_ROOT_USER
+              value: "minio"
+            - name: MINIO_ROOT_PASSWORD
+              value: "minio"
+
           ports:
             - containerPort: 9000
+            - containerPort: 33933
           volumeMounts:
             - name: storage
               mountPath: "/storage"
