--- a/ml-workshop-minio/base/minio-dc.yaml
+++ b/ml-workshop-minio/base/minio-dc.yaml
@@ -68,7 +68,7 @@ spec:
             - name: MINIO_ROOT_USER
               value: "minio"
             - name: MINIO_ROOT_PASSWORD
-              value: "minio"
+              value: "minio123"
 
           ports:
             - containerPort: 9000
