--- a/ml-workshop-minio/base/minio-route.yaml
+++ b/ml-workshop-minio/base/minio-route.yaml
@@ -1,3 +1,4 @@
+---
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
@@ -19,8 +20,36 @@ spec:
     name: minio-ml-workshop
     weight: 100
   port:
-    targetPort: 33933
+    targetPort: 9000
 #  tls:
 #    insecureEdgeTerminationPolicy: Redirect
 #    termination: edge
+  wildcardPolicy: None
+
+---
+kind: Route
+apiVersion: route.openshift.io/v1
+metadata:
+  #  namespace: ml-workshop
+  name: minio-ml-workshop-ui
+  labels:
+    helm.sh/chart: s3-server-0.0.1
+    app.kubernetes.io/name: minio
+    app.kubernetes.io/instance: min
+    app.kubernetes.io/version: "0.0.1"
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    openshift.io/host.generated: 'true'
+spec:
+  host: null
+  subdomain: ''
+  to:
+    kind: Service
+    name: minio-ml-workshop
+    weight: 100
+  port:
+    targetPort: 33933
+  #  tls:
+  #    insecureEdgeTerminationPolicy: Redirect
+  #    termination: edge
   wildcardPolicy: None
