added custom images

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -130,6 +130,11 @@ spec:
           name: manifests
           path: ml-workshop-airflow
       name: ml-airflow
+    - kustomizeConfig:
+        repoRef:
+          name: manifests
+          path: ml-workshop-custom-images
+      name: ml-sorkshop-images
 
   repos:
     - name: kf-manifests
