added trino kafka connector and config

--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -15,5 +15,107 @@ stringData:
     hive.allow-drop-table=true
     hive.parquet.use-column-names=true
     hive.recursive-directories=true
+  customerchurn.properties: |
+    connector.name=kafka
+    kafka.nodes=odh-message-bus-kafka-bootstrap:9092
+    kafka.table-names=data
+    kafka.hide-internal-columns=false
+  customer_churn.json: |
+    {
+    "tableName": "customer_churn",
+    "topicName": "data",
+    "dataFormat": "json",
+    "key": {
+        "dataFormat": "raw",
+        "fields": [
+            {
+                "name": "kafka_key",
+                "dataFormat": "LONG",
+                "type": "BIGINT",
+                "hidden": "false"
+            }
+        ]
+    },
+    "message": {
+        "dataFormat":"json",
+        "fields": [
+            {
+                "name": "customerID",
+                "mapping": "customerID",
+                "type": "INTEGER"
+            },
+            {
+                "name": "PhoneService",
+                "mapping": "PhoneService",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "MultipleLines",
+                "mapping": "MultipleLines",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "InternetService",
+                "mapping": "InternetService",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "OnlineSecurity",
+                "mapping": "OnlineSecurity",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "OnlineBackup",
+                "mapping": "OnlineBackup",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "DeviceProtection",
+                "mapping": "DeviceProtection",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "TechSupport",
+                "mapping": "TechSupport",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "StreamingTV",
+                "mapping": "StreamingTV",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "StreamingMovies",
+                "mapping": "StreamingMovies",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "Contract",
+                "mapping": "Contract",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "PaperlessBilling",
+                "mapping": "PaperlessBilling",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "MonthlyCharges",
+                "mapping": "MonthlyCharges",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "TotalCharges",
+                "mapping": "TotalCharges",
+                "type": "DOUBLE"
+            },
+            {
+                "name": "Churn",
+                "mapping": "Churn",
+                "type": "VARCHAR"
+            }
+        ]
+    }
+    }
   jmx.properties: |
     connector.name=jmx
