--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -20,9 +20,9 @@ stringData:
     kafka.nodes=odh-message-bus-kafka-bootstrap:9092
     kafka.table-names=data
     kafka.hide-internal-columns=false
-  customer_churn.json: |
+  data.json: |
     {
-    "tableName": "customer_churn",
+    "tableName": "data",
     "topicName": "data",
     "dataFormat": "json",
     "key": {
