add addtional \ to teh data

--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -25,92 +25,81 @@ stringData:
     "tableName": "data",
     "topicName": "data",
     "dataFormat": "json",
-    "key": {
-        "dataFormat": "raw",
-        "fields": [
-            {
-                "name": "kafka_key",
-                "dataFormat": "LONG",
-                "type": "BIGINT",
-                "hidden": "false"
-            }
-        ]
-    },
     "message": {
         "dataFormat":"json",
         "fields": [
             {
-                "name": "customerID",
+                "name": "\\\"customerID\\\"",
                 "mapping": "customerID",
                 "type": "INTEGER"
             },
             {
-                "name": "PhoneService",
+                "name": "\\\"PhoneService\\\"",
                 "mapping": "PhoneService",
                 "type": "VARCHAR"
             },
             {
-                "name": "MultipleLines",
+                "name": "\\\"MultipleLines\\\"",
                 "mapping": "MultipleLines",
                 "type": "VARCHAR"
             },
             {
-                "name": "InternetService",
+                "name": "\\\"InternetService\\\"",
                 "mapping": "InternetService",
                 "type": "VARCHAR"
             },
             {
-                "name": "OnlineSecurity",
+                "name": "\\\"OnlineSecurity",
                 "mapping": "OnlineSecurity",
                 "type": "VARCHAR"
             },
             {
-                "name": "OnlineBackup",
+                "name": "\\\"OnlineBackup\\\"",
                 "mapping": "OnlineBackup",
                 "type": "VARCHAR"
             },
             {
-                "name": "DeviceProtection",
+                "name": "\\\"DeviceProtection\\\"",
                 "mapping": "DeviceProtection",
                 "type": "VARCHAR"
             },
             {
-                "name": "TechSupport",
+                "name": "\\\"TechSupport\\\"",
                 "mapping": "TechSupport",
                 "type": "VARCHAR"
             },
             {
-                "name": "StreamingTV",
+                "name": "\\\"StreamingTV\\\"",
                 "mapping": "StreamingTV",
                 "type": "VARCHAR"
             },
             {
-                "name": "StreamingMovies",
+                "name": "\\\"StreamingMovies\\\"",
                 "mapping": "StreamingMovies",
                 "type": "VARCHAR"
             },
             {
-                "name": "Contract",
+                "name": "\\\"Contract\\\"",
                 "mapping": "Contract",
                 "type": "VARCHAR"
             },
             {
-                "name": "PaperlessBilling",
+                "name": "\\\"PaperlessBilling\\\"",
                 "mapping": "PaperlessBilling",
                 "type": "VARCHAR"
             },
             {
-                "name": "MonthlyCharges",
+                "name": "\\\"MonthlyCharges\\\"",
                 "mapping": "MonthlyCharges",
                 "type": "VARCHAR"
             },
             {
-                "name": "TotalCharges",
+                "name": "\\\"TotalCharges\\\"",
                 "mapping": "TotalCharges",
                 "type": "DOUBLE"
             },
             {
-                "name": "Churn",
+                "name": "\\\"Churn\\\"",
                 "mapping": "Churn",
                 "type": "VARCHAR"
             }
