--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -29,78 +29,78 @@ stringData:
         "dataFormat":"json",
         "fields": [
             {
-                "name": "\\\"customerID\\\"",
-                "mapping": "customerID",
+                "name": "customerID",
+                "mapping": "\\\"customerID\\\"",
                 "type": "INTEGER"
             },
             {
-                "name": "\\\"PhoneService\\\"",
-                "mapping": "PhoneService",
+                "name": "PhoneService",
+                "mapping": "\\\"PhoneService\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"MultipleLines\\\"",
-                "mapping": "MultipleLines",
+                "name": "MultipleLines",
+                "mapping": "\\\"MultipleLines\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"InternetService\\\"",
-                "mapping": "InternetService",
+                "name": "InternetService",
+                "mapping": "\\\"InternetService\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"OnlineSecurity",
-                "mapping": "OnlineSecurity",
+                "name": "OnlineSecurity",
+                "mapping": "\\\"OnlineSecurity\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"OnlineBackup\\\"",
-                "mapping": "OnlineBackup",
+                "name": "OnlineBackup",
+                "mapping": "\\\"OnlineBackup\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"DeviceProtection\\\"",
-                "mapping": "DeviceProtection",
+                "name": "DeviceProtection",
+                "mapping": "\\\"DeviceProtection\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"TechSupport\\\"",
-                "mapping": "TechSupport",
+                "name": "TechSupport",
+                "mapping": "\\\"TechSupport\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"StreamingTV\\\"",
-                "mapping": "StreamingTV",
+                "name": "StreamingTV",
+                "mapping": "\\\"StreamingTV\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"StreamingMovies\\\"",
-                "mapping": "StreamingMovies",
+                "name": "StreamingMovies",
+                "mapping": "\\\"StreamingMovies\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"Contract\\\"",
-                "mapping": "Contract",
+                "name": "Contract",
+                "mapping": "\\\"Contract\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"PaperlessBilling\\\"",
-                "mapping": "PaperlessBilling",
+                "name": "PaperlessBilling",
+                "mapping": "\\\"PaperlessBilling\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"MonthlyCharges\\\"",
-                "mapping": "MonthlyCharges",
+                "name": "MonthlyCharges",
+                "mapping": "\\\"MonthlyCharges\\\"",
                 "type": "VARCHAR"
             },
             {
-                "name": "\\\"TotalCharges\\\"",
-                "mapping": "TotalCharges",
+                "name": "TotalCharges",
+                "mapping": "\\\"TotalCharges\\\"",
                 "type": "DOUBLE"
             },
             {
-                "name": "\\\"Churn\\\"",
-                "mapping": "Churn",
+                "name": "Churn",
+                "mapping": "\\\"Churn\\\"",
                 "type": "VARCHAR"
             }
         ]
