corec the problem at data level

--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -30,77 +30,77 @@ stringData:
         "fields": [
             {
                 "name": "customerID",
-                "mapping": "\\\"customerID\\\"",
+                "mapping": "customerID",
                 "type": "INTEGER"
             },
             {
                 "name": "PhoneService",
-                "mapping": "\\\"PhoneService\\\"",
+                "mapping": "PhoneService",
                 "type": "VARCHAR"
             },
             {
                 "name": "MultipleLines",
-                "mapping": "\\\"MultipleLines\\\"",
+                "mapping": "MultipleLines",
                 "type": "VARCHAR"
             },
             {
                 "name": "InternetService",
-                "mapping": "\\\"InternetService\\\"",
+                "mapping": "InternetService",
                 "type": "VARCHAR"
             },
             {
                 "name": "OnlineSecurity",
-                "mapping": "\\\"OnlineSecurity\\\"",
+                "mapping": "OnlineSecurity",
                 "type": "VARCHAR"
             },
             {
                 "name": "OnlineBackup",
-                "mapping": "\\\"OnlineBackup\\\"",
+                "mapping": "OnlineBackup",
                 "type": "VARCHAR"
             },
             {
                 "name": "DeviceProtection",
-                "mapping": "\\\"DeviceProtection\\\"",
+                "mapping": "DeviceProtection",
                 "type": "VARCHAR"
             },
             {
                 "name": "TechSupport",
-                "mapping": "\\\"TechSupport\\\"",
+                "mapping": "TechSupport",
                 "type": "VARCHAR"
             },
             {
                 "name": "StreamingTV",
-                "mapping": "\\\"StreamingTV\\\"",
+                "mapping": "StreamingTV",
                 "type": "VARCHAR"
             },
             {
                 "name": "StreamingMovies",
-                "mapping": "\\\"StreamingMovies\\\"",
+                "mapping": "StreamingMovies",
                 "type": "VARCHAR"
             },
             {
                 "name": "Contract",
-                "mapping": "\\\"Contract\\\"",
+                "mapping": "Contract",
                 "type": "VARCHAR"
             },
             {
                 "name": "PaperlessBilling",
-                "mapping": "\\\"PaperlessBilling\\\"",
+                "mapping": "PaperlessBilling",
                 "type": "VARCHAR"
             },
             {
                 "name": "MonthlyCharges",
-                "mapping": "\\\"MonthlyCharges\\\"",
+                "mapping": "MonthlyCharges",
                 "type": "VARCHAR"
             },
             {
                 "name": "TotalCharges",
-                "mapping": "\\\"TotalCharges\\\"",
+                "mapping": "TotalCharges",
                 "type": "DOUBLE"
             },
             {
                 "name": "Churn",
-                "mapping": "\\\"Churn\\\"",
+                "mapping": "Churn",
                 "type": "VARCHAR"
             }
         ]
