align names better

--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -20,7 +20,7 @@ stringData:
     kafka.nodes=odh-message-bus-kafka-bootstrap:9092
     kafka.table-names=data
     kafka.hide-internal-columns=false
-  data.json: |
+  customerchurn.json: |
     {
     "tableName": "data",
     "topicName": "data",
