--- a/ml-workshop-modeldb/base/modeldb-statefullset.yaml
+++ b/ml-workshop-modeldb/base/modeldb-statefullset.yaml
@@ -23,7 +23,8 @@ spec:
         verta.ai/disable_anti_affinity: "true"
     spec:
       containers:
-        - image: vertaaiofficial/modeldb-backend:2.0.8.1
+        - image: quay.io/ml-aml-workshop/modeldb-backend:14AUG2021
+          # vertaaiofficial/modeldb-backend:2.0.8.1
           env:
             - name: VERTA_MODELDB_CONFIG
               value: /config-backend/config.yaml
@@ -66,7 +67,8 @@ spec:
             - mountPath: "/artifact-store/"
               name: modeldb
 #              subPath:
-        - image: vertaaiofficial/modeldb-proxy:2.0.8.1
+        - image:  quay.io/ml-aml-workshop/modeldb-proxy:14AUG2021
+          #  vertaaiofficial/modeldb-proxy:2.0.8.1
           imagePullPolicy: Always
           name: proxy
           env:
