move to FSI column mapping temp only

--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -21,6 +21,98 @@ stringData:
     kafka.table-names=data
     kafka.hide-internal-columns=false
   customerchurn.json: |
+   {
+    "tableName": "data",
+    "topicName": "data",
+    "dataFormat": "json",
+    "message": {
+        "dataFormat":"json",
+        "fields": [
+            {
+                "name": "customerID",
+                "mapping": "customerID",
+                "type": "INTEGER"
+            },
+            {
+                "name": "Premium",
+                "mapping": "Premium",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "RelationshipManager",
+                "mapping": "RelationshipManager",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "PrimaryChannel",
+                "mapping": "PrimaryChannel",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "HasCreditCard",
+                "mapping": "HasCreditCard",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "DebitCard",
+                "mapping": "DebitCard",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "IncomeProtection",
+                "mapping": "IncomeProtection",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "WealthManagement",
+                "mapping": "WealthManagement",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "HomeEquityLoans",
+                "mapping": "HomeEquityLoans",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "MoneyMarketAccount",
+                "mapping": "MoneyMarketAccount",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "CreditRating",
+                "mapping": "CreditRating",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "PaperlessBilling",
+                "mapping": "PaperlessBilling",
+                "type": "VARCHAR"
+            },
+
+            {
+                "name": "AccountType",
+                "mapping": "AccountType",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "MonthlyCharges",
+                "mapping": "MonthlyCharges",
+                "type": "VARCHAR"
+            },
+            {
+                "name": "TotalCharges",
+                "mapping": "TotalCharges",
+                "type": "DOUBLE"
+            },
+            {
+                "name": "Churn",
+                "mapping": "Churn",
+                "type": "VARCHAR"
+            }
+        ]
+    }
+    }
+  customerchurntelco.json: |   
     {
     "tableName": "data",
     "topicName": "data",
