--- a/ml-workshop-custom-images/base/kustomization.yaml
+++ b/ml-workshop-custom-images/base/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - elyra-imagestream.yaml
-  - elyra-imagestream-v2.yaml
+  - elyra-imagestream-seldon-alibi.yaml
 
 commonLabels:
   opendatahub.io/component: "false"
