--- a/trino/overlays/ml-workshop/kustomization.yaml
+++ b/trino/overlays/ml-workshop/kustomization.yaml
@@ -12,4 +12,4 @@ patchesStrategicMerge:
   - aws-secret.yaml
   - trino-worker-dc.yaml
   - trino-coordinator-dc.yaml
-#  - trino-catalog-secret.yaml
+  - trino-catalog-secret.yaml
