add mlflow to the ODH manifests

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -135,6 +135,11 @@ spec:
           name: manifests
           path: ml-workshop-custom-images
       name: ml-workshop-images
+    - kustomizeConfig:
+        repoRef:
+          name: manifests
+          path: ml-workshop-mlflow
+      name: ml-workshop-mlflow
 
   repos:
     - name: kf-manifests
