--- a/ml-workshop-kafka-populator/base/kustomization.yaml
+++ b/ml-workshop-kafka-populator/base/kustomization.yaml
@@ -1,8 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kafka-topic.yaml
-  - kafkapopulator-job.yaml
+  - kafka-topic-fsi.yaml
+  - kafka-topic-telco.yaml
+  - kafkapopulator-job-fsi.yaml
+  - kafkapopulator-job-telco.yaml
 
 commonLabels:
   opendatahub.io/component: "false"
