--- a/ml-workshop-kafka-populator/base/kafkapopulator-job-telco.yaml
+++ b/ml-workshop-kafka-populator/base/kafkapopulator-job-telco.yaml
@@ -4,7 +4,7 @@ kind: Job
 metadata:
   name: kafkadump-ml-workshop
   labels:
-    application: kafkadump-ml-workshop
+    application: kafkadump-ml-workshop-telco
 spec:
   template:
     metadata:
@@ -16,7 +16,7 @@ spec:
           image: 'registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest'
           command: ['sh', '-c', "until nslookup odh-message-bus-kafka-bootstrap.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for kafka service; sleep 2; done"]
       containers:
-        - name: kafka-dump-ml-workshop
+        - name: kafka-dump-ml-workshop-telco
           image: 'quay.io/ml-aml-workshop/kafka-churn-populator:0.0.2'
           imagePullPolicy: Always
           env:
