configure JH file for diff resources and upgraded mlflow to latest version ⛈

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -65,6 +65,8 @@ spec:
 #          path: prometheus/operator
 #      name: prometheus-operator
     - kustomizeConfig:
+        overlays:
+          - ml-workshop
         parameters:
           - name: s3_endpoint_url
             value: "minio-ml-workshop.ml-workshop:9000"
