--- a/jupyterhub/jupyterhub/overlays/ml-workshop/kustomization.yaml
+++ b/jupyterhub/jupyterhub/overlays/ml-workshop/kustomization.yaml
@@ -8,5 +8,5 @@ patchesStrategicMerge:
 
 
 commonLabels:
-  opendatahub.io/component: "false"
+  opendatahub.io/component: "true"
   component.opendatahub.io/name: jupyterhub
