rbac for the airflow

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -86,6 +86,8 @@ spec:
           path: airflow/operator
       name: airflow-operator
     - kustomizeConfig:
+        overlays:
+          - rbac
         repoRef:
           name: manifests
           path: airflow/cluster
