--- a/ml-workshop-mlflow/base/mlflow-dc.yaml
+++ b/ml-workshop-mlflow/base/mlflow-dc.yaml
@@ -18,14 +18,26 @@ spec:
           image: 'registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest'
           command: ['sh', '-c', "until nslookup mlflow-db.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mlflow db service; sleep 2; done"]
       containers:
+        - name: oauth-proxy
+          image: openshift/oauth-proxy:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 5000
+              name: public
+          args:
+            - --https-address=
+            - --provider=openshift
+            - --openshift-service-account=default
+            - --upstream=http://localhost:5500
+            - --cookie-secret=SECRET
         - name: mlflow-deployment
           image: quay.io/ml-aml-workshop/mlflow:0.0.2
           imagePullPolicy: Always
           args:
             - mlflow
             - server
-            - --host=0.0.0.0
-            - --port=5000
+            - --host=localhost
+            - --port=5500
             - --backend-store-uri=postgresql://postgres:postgres@mlflow-db:5432/postgres
             - --default-artifact-root=s3://mlflow/
             - --workers=2
